@startuml

[*] -right-> Open
Open -right-> ReadyForDelivery : ReceivePayment
Open -right-> ReadyForDelivery : UnlockDelivery
Open --> Canceled : Cancel
ReadyForDelivery -right-> Completed : [if paid]\nDeliver
ReadyForDelivery --> AwaitingPayment : [if !paid]\nDeliver
ReadyForDelivery --> Canceled : [if paid]\nRefund
ReadyForDelivery --> Canceled : [if !paid]\nCancel
ReadyForDelivery --> ReadyForDelivery : \nReceivePayment
AwaitingPayment --> Completed : ReceivePayment
AwaitingPayment --> Canceled : Cancel
Completed --> Canceled : Refund
Canceled --> Open : Reopen

@enduml
